<resources>
    <string name="app_name">Age In Minutes</string>

    <string name="txt_calculate">CALCULATE YOUR</string>
    <string name="txt_age">AGE</string>
    <string name="txt_minutes">IN MINUTES</string>
    <string name="btn_select_date">SELECT DATE</string>
    <string name="txt_date">28.08.2022</string>
    <string name="txt_selected_date">Selected Date</string>
    <string name="txt_minutes_date">14000000</string>
    <string name="txt_minutes_till_date">In minutes till date</string>
</resources>